--- a/.gitattributes
+++ b/.gitattributes
@@ -64,6 +64,9 @@ chapter2/wiretap/src/main/resources/log4j.properties -text
 chapter9/multiple-routes/pom.xml svneol=native#text/xml
 chapter9/multiple-routes/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/multiple-routes/src/test/resources/spring-context.xml svneol=native#text/xml
+chapter9/oncompletion/pom.xml svneol=native#text/xml
+chapter9/oncompletion/src/test/resources/META-INF/spring/oncompletion.xml svneol=native#text/xml
+chapter9/oncompletion/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/pom.xml svneol=native#text/xml
 chapter9/riderautoparts-order/pom.xml svneol=native#text/xml
 chapter9/riderautoparts-order/src/test/resources/META-INF/spring/camel-cxf.xml svneol=native#text/xml
