--- a/.gitattributes
+++ b/.gitattributes
@@ -79,6 +79,11 @@ chapter5/errorhandler/src/test/resources/log4j.properties svneol=native#text/pla
 chapter5/onexception/pom.xml svneol=native#text/xml
 chapter5/onexception/src/test/resources/log4j.properties svneol=native#text/plain
 chapter5/pom.xml svneol=native#text/xml
+chapter5/usecase/README.txt svneol=native#text/plain
+chapter5/usecase/pom.xml svneol=native#text/xml
+chapter5/usecase/src/main/resources/bad.txt svneol=native#text/plain
+chapter5/usecase/src/main/resources/good.txt svneol=native#text/plain
+chapter5/usecase/src/main/resources/log4j.properties svneol=native#text/plain
 chapter9/multiple-routes/pom.xml svneol=native#text/xml
 chapter9/multiple-routes/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/multiple-routes/src/test/resources/spring-context.xml svneol=native#text/xml
