--- a/.gitattributes
+++ b/.gitattributes
@@ -84,6 +84,12 @@ chapter5/usecase/pom.xml svneol=native#text/xml
 chapter5/usecase/src/main/resources/bad.txt svneol=native#text/plain
 chapter5/usecase/src/main/resources/good.txt svneol=native#text/plain
 chapter5/usecase/src/main/resources/log4j.properties svneol=native#text/plain
+chapter6/dataset/pom.xml svneol=native#text/xml
+chapter6/dataset/src/main/resources/META-INF/spring/camel-cxf.xml svneol=native#text/xml
+chapter6/dataset/src/main/resources/META-INF/spring/camel-route.xml svneol=native#text/xml
+chapter6/dataset/src/main/resources/wsdl/acme_order.wsdl svneol=native#text/xml
+chapter6/dataset/src/test/resources/camelinaction/camel-dataset.xml svneol=native#text/xml
+chapter6/dataset/src/test/resources/log4j.properties svneol=native#text/plain
 chapter6/error/pom.xml svneol=native#text/xml
 chapter6/error/src/main/resources/camelinaction/usecase.xml svneol=native#text/xml
 chapter6/error/src/main/resources/usecase.properties svneol=native#text/plain
