--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,13 @@ chapter13/pom.xml svneol=native#text/xml
 chapter13/routepolicy/pom.xml svneol=native#text/xml
 chapter13/routepolicy/src/test/resources/camel-fliproute.xml svneol=native#text/xml
 chapter13/routepolicy/src/test/resources/log4j.properties svneol=native#text/plain
+chapter13/shutdown/pom.xml svneol=native#text/xml
+chapter13/shutdown/src/main/resources/META-INF/services/org/apache/camel/TypeConverter -text
+chapter13/shutdown/src/main/resources/wsdl/inventory.wsdl svneol=native#text/xml
+chapter13/shutdown/src/test/resources/META-INF/spring/camel-cxf.xml svneol=native#text/xml
+chapter13/shutdown/src/test/resources/META-INF/spring/camel-route-java.xml svneol=native#text/xml
+chapter13/shutdown/src/test/resources/META-INF/spring/camel-route-xml.xml svneol=native#text/xml
+chapter13/shutdown/src/test/resources/log4j.properties svneol=native#text/plain
 chapter13/startup/pom.xml svneol=native#text/xml
 chapter13/startup/src/main/resources/META-INF/services/org/apache/camel/TypeConverter -text
 chapter13/startup/src/main/resources/wsdl/inventory.wsdl svneol=native#text/xml
