--- a/.gitattributes
+++ b/.gitattributes
@@ -28,6 +28,7 @@ chapter13/shutdown/pom.xml svneol=native#text/xml
 chapter13/shutdown/src/main/resources/META-INF/services/org/apache/camel/TypeConverter -text
 chapter13/shutdown/src/main/resources/wsdl/inventory.wsdl svneol=native#text/xml
 chapter13/shutdown/src/test/resources/META-INF/spring/camel-cxf.xml svneol=native#text/xml
+chapter13/shutdown/src/test/resources/META-INF/spring/camel-route-defer-java.xml svneol=native#text/xml
 chapter13/shutdown/src/test/resources/META-INF/spring/camel-route-java.xml svneol=native#text/xml
 chapter13/shutdown/src/test/resources/META-INF/spring/camel-route-xml.xml svneol=native#text/xml
 chapter13/shutdown/src/test/resources/log4j.properties svneol=native#text/plain
