--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,13 @@ chapter1/file-copy/src/main/java/camelinaction/FileCopier.java -text
 chapter1/file-copy/src/main/java/camelinaction/FileCopierWithCamel.java -text
 chapter1/file-copy/src/main/resources/log4j.properties -text
 chapter1/pom.xml -text
+chapter10/bigfile/pom.xml svneol=native#text/xml
+chapter10/bigfile/src/test/resources/META-INF/spring/BigFileCachedThreadPoolTest.xml svneol=native#text/xml
+chapter10/bigfile/src/test/resources/META-INF/spring/BigFileFixedThreadPoolTest.xml svneol=native#text/xml
+chapter10/bigfile/src/test/resources/META-INF/spring/BigFileParallelTest.xml svneol=native#text/xml
+chapter10/bigfile/src/test/resources/META-INF/spring/BigFileSedaTest.xml svneol=native#text/xml
+chapter10/bigfile/src/test/resources/log4j.properties svneol=native#text/plain
+chapter10/pom.xml svneol=native#text/xml
 chapter12/custom/pom.xml svneol=native#text/xml
 chapter12/custom/src/main/resources/log4j.properties svneol=native#text/plain
 chapter12/health/pom.xml svneol=native#text/xml
