--- a/.gitattributes
+++ b/.gitattributes
@@ -12,8 +12,13 @@ chapter10/bigfile/src/test/resources/META-INF/spring/BigFileParallelTest.xml svn
 chapter10/bigfile/src/test/resources/META-INF/spring/BigFileSedaTest.xml svneol=native#text/xml
 chapter10/bigfile/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/custom/pom.xml svneol=native#text/xml
+chapter10/custom/src/test/resources/META-INF/spring/CustomThreadPoolProfileTest.xml svneol=native#text/xml
 chapter10/custom/src/test/resources/META-INF/spring/ThreadPoolTest.xml svneol=native#text/xml
 chapter10/custom/src/test/resources/log4j.properties svneol=native#text/plain
+chapter10/eip/pom.xml svneol=native#text/xml
+chapter10/eip/src/main/resources/META-INF/spring/route-parallel.xml svneol=native#text/xml
+chapter10/eip/src/main/resources/META-INF/spring/route.xml svneol=native#text/xml
+chapter10/eip/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/pom.xml svneol=native#text/xml
 chapter12/custom/pom.xml svneol=native#text/xml
 chapter12/custom/src/main/resources/log4j.properties svneol=native#text/plain
