--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,8 @@ chapter10/eip/src/main/resources/META-INF/spring/route-parallel.xml svneol=nativ
 chapter10/eip/src/main/resources/META-INF/spring/route.xml svneol=native#text/xml
 chapter10/eip/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/pom.xml svneol=native#text/xml
+chapter10/synchronicity/pom.xml svneol=native#text/xml
+chapter10/synchronicity/src/test/resources/log4j.properties svneol=native#text/plain
 chapter12/custom/pom.xml svneol=native#text/xml
 chapter12/custom/src/main/resources/log4j.properties svneol=native#text/plain
 chapter12/health/pom.xml svneol=native#text/xml
