--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,8 @@ chapter10/bigfile/src/test/resources/META-INF/spring/BigFileFixedThreadPoolTest.
 chapter10/bigfile/src/test/resources/META-INF/spring/BigFileParallelTest.xml svneol=native#text/xml
 chapter10/bigfile/src/test/resources/META-INF/spring/BigFileSedaTest.xml svneol=native#text/xml
 chapter10/bigfile/src/test/resources/log4j.properties svneol=native#text/plain
+chapter10/client/pom.xml svneol=native#text/xml
+chapter10/client/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/custom/pom.xml svneol=native#text/xml
 chapter10/custom/src/test/resources/META-INF/spring/CustomThreadPoolProfileTest.xml svneol=native#text/xml
 chapter10/custom/src/test/resources/META-INF/spring/ThreadPoolTest.xml svneol=native#text/xml
