--- a/.gitattributes
+++ b/.gitattributes
@@ -175,6 +175,9 @@ chapter7/ftp/src/main/resources/META-INF/spring/camelContext.xml -text
 chapter7/ftp/src/main/resources/log4j.properties -text
 chapter7/ftp/src/main/resources/users.properties -text
 chapter7/pom.xml -text
+chapter8/eip/pom.xml svneol=native#text/xml
+chapter8/eip/src/test/resources/META-INF/spring/aggregate-abc.xml svneol=native#text/xml
+chapter8/eip/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/pom.xml svneol=native#text/xml
 chapter8/starterkit/pom.xml svneol=native#text/xml
 chapter8/starterkit/src/main/resources/META-INF/spring/activemq-broker.xml svneol=native#text/xml
