--- a/.gitattributes
+++ b/.gitattributes
@@ -58,6 +58,15 @@ chapter13/startup/src/test/resources/META-INF/spring/camel-cxf.xml svneol=native
 chapter13/startup/src/test/resources/META-INF/spring/camel-route-java.xml svneol=native#text/xml
 chapter13/startup/src/test/resources/META-INF/spring/camel-route-xml.xml svneol=native#text/xml
 chapter13/startup/src/test/resources/log4j.properties svneol=native#text/plain
+chapter14/pom.xml svneol=native#text/xml
+chapter14/starterkit/pom.xml svneol=native#text/xml
+chapter14/starterkit/src/main/resources/META-INF/spring/activemq-broker.xml svneol=native#text/xml
+chapter14/starterkit/src/main/resources/META-INF/spring/camel-client.xml svneol=native#text/xml
+chapter14/starterkit/src/main/resources/META-INF/spring/camel-server.xml svneol=native#text/xml
+chapter14/starterkit/src/main/resources/log4j.properties svneol=native#text/plain
+chapter14/starterkit/src/test/resources/META-INF/spring/camel-mocked-seda.xml svneol=native#text/xml
+chapter14/starterkit/src/test/resources/META-INF/spring/camel-mocked.xml svneol=native#text/xml
+chapter14/starterkit/src/test/resources/log4j.properties svneol=native#text/plain
 chapter2/cbr/pom.xml -text
 chapter2/cbr/readme.txt -text
 chapter2/cbr/src/data/message1.xml -text
@@ -180,14 +189,6 @@ chapter8/eip/src/test/resources/META-INF/spring/aggregate-abc.xml svneol=native#
 chapter8/eip/src/test/resources/META-INF/spring/aggregate-xml.xml svneol=native#text/xml
 chapter8/eip/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/pom.xml svneol=native#text/xml
-chapter8/starterkit/pom.xml svneol=native#text/xml
-chapter8/starterkit/src/main/resources/META-INF/spring/activemq-broker.xml svneol=native#text/xml
-chapter8/starterkit/src/main/resources/META-INF/spring/camel-client.xml svneol=native#text/xml
-chapter8/starterkit/src/main/resources/META-INF/spring/camel-server.xml svneol=native#text/xml
-chapter8/starterkit/src/main/resources/log4j.properties svneol=native#text/plain
-chapter8/starterkit/src/test/resources/META-INF/spring/camel-mocked-seda.xml svneol=native#text/xml
-chapter8/starterkit/src/test/resources/META-INF/spring/camel-mocked.xml svneol=native#text/xml
-chapter8/starterkit/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/multiple-routes/pom.xml svneol=native#text/xml
 chapter9/multiple-routes/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/multiple-routes/src/test/resources/spring-context.xml svneol=native#text/xml
