Renamed duplicated artifacts
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@119 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,15 +13,15 @@ chapter10/bigfile/src/test/resources/META-INF/spring/BigFileSedaTest.xml svneol=
 chapter10/bigfile/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/client/pom.xml svneol=native#text/xml
 chapter10/client/src/test/resources/log4j.properties svneol=native#text/plain
-chapter10/custom/pom.xml svneol=native#text/xml
-chapter10/custom/src/test/resources/META-INF/spring/CustomThreadPoolProfileTest.xml svneol=native#text/xml
-chapter10/custom/src/test/resources/META-INF/spring/ThreadPoolTest.xml svneol=native#text/xml
-chapter10/custom/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/eip/pom.xml svneol=native#text/xml
 chapter10/eip/src/main/resources/META-INF/spring/route-parallel.xml svneol=native#text/xml
 chapter10/eip/src/main/resources/META-INF/spring/route.xml svneol=native#text/xml
 chapter10/eip/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/pom.xml svneol=native#text/xml
+chapter10/pools/pom.xml svneol=native#text/xml
+chapter10/pools/src/test/resources/META-INF/spring/CustomThreadPoolProfileTest.xml svneol=native#text/xml
+chapter10/pools/src/test/resources/META-INF/spring/ThreadPoolTest.xml svneol=native#text/xml
+chapter10/pools/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/synchronicity/pom.xml svneol=native#text/xml
 chapter10/synchronicity/src/test/resources/log4j.properties svneol=native#text/plain
 chapter12/custom/pom.xml svneol=native#text/xml
@@ -184,10 +184,10 @@ chapter7/ftp/src/main/resources/META-INF/spring/camelContext.xml -text
 chapter7/ftp/src/main/resources/log4j.properties -text
 chapter7/ftp/src/main/resources/users.properties -text
 chapter7/pom.xml -text
-chapter8/eip/pom.xml svneol=native#text/xml
-chapter8/eip/src/test/resources/META-INF/spring/aggregate-abc.xml svneol=native#text/xml
-chapter8/eip/src/test/resources/META-INF/spring/aggregate-xml.xml svneol=native#text/xml
-chapter8/eip/src/test/resources/log4j.properties svneol=native#text/plain
+chapter8/eips/pom.xml svneol=native#text/xml
+chapter8/eips/src/test/resources/META-INF/spring/aggregate-abc.xml svneol=native#text/xml
+chapter8/eips/src/test/resources/META-INF/spring/aggregate-xml.xml svneol=native#text/xml
+chapter8/eips/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/pom.xml svneol=native#text/xml
 chapter9/multiple-routes/pom.xml svneol=native#text/xml
 chapter9/multiple-routes/src/test/resources/log4j.properties svneol=native#text/plain
