--- a/.gitattributes
+++ b/.gitattributes
@@ -129,6 +129,7 @@ chapter3/converter/src/test/resources/log4j.properties svneol=native#text/plain
 chapter3/order/pom.xml svneol=native#text/xml
 chapter3/order/src/test/resources/camelinaction/jaxb.index -text
 chapter3/order/src/test/resources/camelinaction/mail.vm -text
+chapter3/order/src/test/resources/camelinaction/order-csv.xml svneol=native#text/xml
 chapter3/order/src/test/resources/camelinaction/order-jaxb.xml svneol=native#text/xml
 chapter3/order/src/test/resources/camelinaction/reverse.xml svneol=native#text/xml
 chapter3/order/src/test/resources/log4j.properties svneol=native#text/plain
