--- a/.gitattributes
+++ b/.gitattributes
@@ -187,9 +187,13 @@ chapter7/ftp/src/main/resources/users.properties -text
 chapter7/pom.xml -text
 chapter8/eips/pom.xml svneol=native#text/xml
 chapter8/eips/src/test/resources/META-INF/spring/aggregate-abc-group.xml svneol=native#text/xml
+chapter8/eips/src/test/resources/META-INF/spring/aggregate-abc-hawtdb.xml svneol=native#text/xml
 chapter8/eips/src/test/resources/META-INF/spring/aggregate-abc.xml svneol=native#text/xml
 chapter8/eips/src/test/resources/META-INF/spring/aggregate-abcend.xml svneol=native#text/xml
 chapter8/eips/src/test/resources/META-INF/spring/aggregate-xml.xml svneol=native#text/xml
+chapter8/eips/src/test/resources/a.txt svneol=native#text/plain
+chapter8/eips/src/test/resources/b.txt svneol=native#text/plain
+chapter8/eips/src/test/resources/c.txt svneol=native#text/plain
 chapter8/eips/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/pom.xml svneol=native#text/xml
 chapter9/multiple-routes/pom.xml svneol=native#text/xml
