--- a/.gitattributes
+++ b/.gitattributes
@@ -186,9 +186,11 @@ chapter7/ftp/src/main/resources/log4j.properties -text
 chapter7/ftp/src/main/resources/users.properties -text
 chapter7/pom.xml -text
 chapter8/aggregator/pom.xml svneol=native#text/xml
+chapter8/aggregator/src/test/resources/META-INF/spring/aggregate-abc-close.xml svneol=native#text/xml
 chapter8/aggregator/src/test/resources/META-INF/spring/aggregate-abc-eager.xml svneol=native#text/xml
 chapter8/aggregator/src/test/resources/META-INF/spring/aggregate-abc-group.xml svneol=native#text/xml
 chapter8/aggregator/src/test/resources/META-INF/spring/aggregate-abc-hawtdb.xml svneol=native#text/xml
+chapter8/aggregator/src/test/resources/META-INF/spring/aggregate-abc-invalid.xml svneol=native#text/xml
 chapter8/aggregator/src/test/resources/META-INF/spring/aggregate-abc.xml svneol=native#text/xml
 chapter8/aggregator/src/test/resources/META-INF/spring/aggregate-xml.xml svneol=native#text/xml
 chapter8/aggregator/src/test/resources/a.txt svneol=native#text/plain
