--- a/.gitattributes
+++ b/.gitattributes
@@ -199,6 +199,9 @@ chapter8/aggregator/src/test/resources/b.txt svneol=native#text/plain
 chapter8/aggregator/src/test/resources/c.txt svneol=native#text/plain
 chapter8/aggregator/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/pom.xml svneol=native#text/xml
+chapter8/splitter/pom.xml svneol=native#text/xml
+chapter8/splitter/src/test/resources/META-INF/spring/splitter-abc.xml svneol=native#text/xml
+chapter8/splitter/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/multiple-routes/pom.xml svneol=native#text/xml
 chapter9/multiple-routes/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/multiple-routes/src/test/resources/spring-context.xml svneol=native#text/xml
