--- a/.gitattributes
+++ b/.gitattributes
@@ -201,6 +201,7 @@ chapter8/aggregator/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/pom.xml svneol=native#text/xml
 chapter8/splitter/pom.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/META-INF/spring/splitter-abc.xml svneol=native#text/xml
+chapter8/splitter/src/test/resources/META-INF/spring/splitter-aggregate.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/META-INF/spring/splitter-bean.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/log4j.properties svneol=native#text/plain
 chapter9/multiple-routes/pom.xml svneol=native#text/xml
