--- a/.gitattributes
+++ b/.gitattributes
@@ -198,6 +198,9 @@ chapter8/aggregator/src/test/resources/a.txt svneol=native#text/plain
 chapter8/aggregator/src/test/resources/b.txt svneol=native#text/plain
 chapter8/aggregator/src/test/resources/c.txt svneol=native#text/plain
 chapter8/aggregator/src/test/resources/log4j.properties svneol=native#text/plain
+chapter8/loadbalancer/pom.xml svneol=native#text/xml
+chapter8/loadbalancer/src/test/resources/META-INF/spring/loadbalancer.xml svneol=native#text/xml
+chapter8/loadbalancer/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/pom.xml svneol=native#text/xml
 chapter8/splitter/pom.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/META-INF/spring/splitter-abc.xml svneol=native#text/xml
