--- a/.gitattributes
+++ b/.gitattributes
@@ -200,6 +200,9 @@ chapter8/aggregator/src/test/resources/c.txt svneol=native#text/plain
 chapter8/aggregator/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/loadbalancer/pom.xml svneol=native#text/xml
 chapter8/loadbalancer/src/test/resources/META-INF/spring/loadbalancer.xml svneol=native#text/xml
+chapter8/loadbalancer/src/test/resources/META-INF/spring/random-loadbalancer.xml svneol=native#text/xml
+chapter8/loadbalancer/src/test/resources/META-INF/spring/sticky-loadbalancer.xml svneol=native#text/xml
+chapter8/loadbalancer/src/test/resources/META-INF/spring/topic-loadbalancer.xml svneol=native#text/xml
 chapter8/loadbalancer/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/pom.xml svneol=native#text/xml
 chapter8/splitter/pom.xml svneol=native#text/xml
