--- a/.gitattributes
+++ b/.gitattributes
@@ -199,6 +199,7 @@ chapter8/aggregator/src/test/resources/b.txt svneol=native#text/plain
 chapter8/aggregator/src/test/resources/c.txt svneol=native#text/plain
 chapter8/aggregator/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/loadbalancer/pom.xml svneol=native#text/xml
+chapter8/loadbalancer/src/test/resources/META-INF/spring/failover-loadbalancer.xml svneol=native#text/xml
 chapter8/loadbalancer/src/test/resources/META-INF/spring/loadbalancer.xml svneol=native#text/xml
 chapter8/loadbalancer/src/test/resources/META-INF/spring/random-loadbalancer.xml svneol=native#text/xml
 chapter8/loadbalancer/src/test/resources/META-INF/spring/sticky-loadbalancer.xml svneol=native#text/xml
