--- a/.gitattributes
+++ b/.gitattributes
@@ -209,6 +209,10 @@ chapter8/loadbalancer/src/test/resources/META-INF/spring/sticky-loadbalancer.xml
 chapter8/loadbalancer/src/test/resources/META-INF/spring/topic-loadbalancer.xml svneol=native#text/xml
 chapter8/loadbalancer/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/pom.xml svneol=native#text/xml
+chapter8/routingslip/pom.xml svneol=native#text/xml
+chapter8/routingslip/src/test/resources/META-INF/spring/routingslip-simple.xml svneol=native#text/xml
+chapter8/routingslip/src/test/resources/META-INF/spring/routingslip.xml svneol=native#text/xml
+chapter8/routingslip/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/splitter/pom.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/META-INF/spring/splitter-abc.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/META-INF/spring/splitter-aggregate.xml svneol=native#text/xml
