--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,9 @@ chapter10/pools/src/test/resources/META-INF/spring/ThreadPoolTest.xml svneol=nat
 chapter10/pools/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/synchronicity/pom.xml svneol=native#text/xml
 chapter10/synchronicity/src/test/resources/log4j.properties svneol=native#text/plain
+chapter11/custom/src/main/resources/META-INF/services/mycomponent -text
+chapter11/scala-order-router-javacontext/src/main/scala/camelinaction/MyRouteBuilder.scala -text
+chapter11/scala-order-router/src/main/scala/camelinaction/MyRouteBuilder.scala -text
 chapter12/custom/pom.xml svneol=native#text/xml
 chapter12/custom/src/main/resources/log4j.properties svneol=native#text/plain
 chapter12/health/pom.xml svneol=native#text/xml
