--- a/.gitattributes
+++ b/.gitattributes
@@ -16,6 +16,7 @@ chapter10/client/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/eip/pom.xml svneol=native#text/xml
 chapter10/eip/src/main/resources/META-INF/spring/route-parallel.xml svneol=native#text/xml
 chapter10/eip/src/main/resources/META-INF/spring/route.xml svneol=native#text/xml
+chapter10/eip/src/main/resources/META-INF/spring/wiretap.xml svneol=native#text/xml
 chapter10/eip/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/pom.xml svneol=native#text/xml
 chapter10/pools/pom.xml svneol=native#text/xml
