--- a/.gitattributes
+++ b/.gitattributes
@@ -175,6 +175,9 @@ chapter6/firsttest/src/test/resources/rider-prod.properties svneol=native#text/p
 chapter6/firsttest/src/test/resources/rider-test.properties svneol=native#text/plain
 chapter6/miranda/pom.xml svneol=native#text/xml
 chapter6/miranda/src/test/resources/log4j.properties svneol=native#text/plain
+chapter6/notify/pom.xml svneol=native#text/xml
+chapter6/notify/src/test/resources/META-INF/spring/camel-context.xml svneol=native#text/xml
+chapter6/notify/src/test/resources/log4j.properties svneol=native#text/plain
 chapter6/pom.xml svneol=native#text/xml
 chapter7/file/data/inbox/message1.xml -text
 chapter7/file/pom.xml -text
