--- a/.gitattributes
+++ b/.gitattributes
@@ -255,6 +255,7 @@ chapter8/routingslip/src/test/resources/META-INF/spring/routingslip.xml svneol=n
 chapter8/routingslip/src/test/resources/log4j.properties svneol=native#text/plain
 chapter8/splitter/pom.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/META-INF/spring/splitter-abc.xml svneol=native#text/xml
+chapter8/splitter/src/test/resources/META-INF/spring/splitter-aggregate-exception.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/META-INF/spring/splitter-aggregate.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/META-INF/spring/splitter-bean.xml svneol=native#text/xml
 chapter8/splitter/src/test/resources/META-INF/spring/splitter-stop.xml svneol=native#text/xml
