--- a/.gitattributes
+++ b/.gitattributes
@@ -23,6 +23,8 @@ chapter10/pools/pom.xml svneol=native#text/xml
 chapter10/pools/src/test/resources/META-INF/spring/CustomThreadPoolProfileTest.xml svneol=native#text/xml
 chapter10/pools/src/test/resources/META-INF/spring/ThreadPoolTest.xml svneol=native#text/xml
 chapter10/pools/src/test/resources/log4j.properties svneol=native#text/plain
+chapter10/scalability/pom.xml svneol=native#text/xml
+chapter10/scalability/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/synchronicity/pom.xml svneol=native#text/xml
 chapter10/synchronicity/src/test/resources/META-INF/spring/earlyreply-context.xml svneol=native#text/xml
 chapter10/synchronicity/src/test/resources/log4j.properties svneol=native#text/plain
