Updated ignore list
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@196 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,18 @@
 /.pmd
 /.project
 /.settings
+appendixE/appendixE.iml
+appendixE/appendixE.ipr
+appendixE/appendixE.iws
+appendixE/lib_managed
+appendixE/logs
+appendixE/project/boot
+appendixE/project/build/target
+appendixE/project/plugins/lib_managed
+appendixE/project/plugins/project
+appendixE/project/plugins/src_managed
+appendixE/project/plugins/target
+appendixE/target
 chapter2/*.i??
 chapter2/.checkstyle
 chapter2/.classpath
