Set the svn:ignore property on file-copy
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@208 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@ appendixE/logs
 appendixE/project/boot
 appendixE/project/build/target
 appendixE/target
+chapter1/file-copy/*.i??
+chapter1/file-copy/.checkstyle
+chapter1/file-copy/.classpath
+chapter1/file-copy/.pmd
+chapter1/file-copy/.project
+chapter1/file-copy/.settings
+chapter1/file-copy/eclipse-classes
+chapter1/file-copy/target
 chapter2/*.i??
 chapter2/.checkstyle
 chapter2/.classpath
