Set the svn:ignore property on the camelinaction project directories
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@209 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,174 @@ chapter1/file-copy/.project
 chapter1/file-copy/.settings
 chapter1/file-copy/eclipse-classes
 chapter1/file-copy/target
+chapter10/bigfile/*.i??
+chapter10/bigfile/.checkstyle
+chapter10/bigfile/.classpath
+chapter10/bigfile/.pmd
+chapter10/bigfile/.project
+chapter10/bigfile/.settings
+chapter10/bigfile/eclipse-classes
+chapter10/bigfile/target
+chapter10/client/*.i??
+chapter10/client/.checkstyle
+chapter10/client/.classpath
+chapter10/client/.pmd
+chapter10/client/.project
+chapter10/client/.settings
+chapter10/client/eclipse-classes
+chapter10/client/target
+chapter10/eip/*.i??
+chapter10/eip/.checkstyle
+chapter10/eip/.classpath
+chapter10/eip/.pmd
+chapter10/eip/.project
+chapter10/eip/.settings
+chapter10/eip/eclipse-classes
+chapter10/eip/target
+chapter10/pools/*.i??
+chapter10/pools/.checkstyle
+chapter10/pools/.classpath
+chapter10/pools/.pmd
+chapter10/pools/.project
+chapter10/pools/.settings
+chapter10/pools/eclipse-classes
+chapter10/pools/target
+chapter10/scalability/*.i??
+chapter10/scalability/.checkstyle
+chapter10/scalability/.classpath
+chapter10/scalability/.pmd
+chapter10/scalability/.project
+chapter10/scalability/.settings
+chapter10/scalability/eclipse-classes
+chapter10/scalability/target
+chapter10/synchronicity/*.i??
+chapter10/synchronicity/.checkstyle
+chapter10/synchronicity/.classpath
+chapter10/synchronicity/.pmd
+chapter10/synchronicity/.project
+chapter10/synchronicity/.settings
+chapter10/synchronicity/eclipse-classes
+chapter10/synchronicity/target
+chapter12/custom/*.i??
+chapter12/custom/.checkstyle
+chapter12/custom/.classpath
+chapter12/custom/.pmd
+chapter12/custom/.project
+chapter12/custom/.settings
+chapter12/custom/eclipse-classes
+chapter12/custom/target
+chapter12/health/*.i??
+chapter12/health/.checkstyle
+chapter12/health/.classpath
+chapter12/health/.pmd
+chapter12/health/.project
+chapter12/health/.settings
+chapter12/health/eclipse-classes
+chapter12/health/target
+chapter12/logging/*.i??
+chapter12/logging/.checkstyle
+chapter12/logging/.classpath
+chapter12/logging/.pmd
+chapter12/logging/.project
+chapter12/logging/.settings
+chapter12/logging/eclipse-classes
+chapter12/logging/target
+chapter12/notifier/*.i??
+chapter12/notifier/.checkstyle
+chapter12/notifier/.classpath
+chapter12/notifier/.pmd
+chapter12/notifier/.project
+chapter12/notifier/.settings
+chapter12/notifier/eclipse-classes
+chapter12/notifier/target
+chapter12/tracer/*.i??
+chapter12/tracer/.checkstyle
+chapter12/tracer/.classpath
+chapter12/tracer/.pmd
+chapter12/tracer/.project
+chapter12/tracer/.settings
+chapter12/tracer/eclipse-classes
+chapter12/tracer/target
+chapter13/osgi/*.i??
+chapter13/osgi/.checkstyle
+chapter13/osgi/.classpath
+chapter13/osgi/.pmd
+chapter13/osgi/.project
+chapter13/osgi/.settings
+chapter13/osgi/eclipse-classes
+chapter13/osgi/target
+chapter13/routepolicy/*.i??
+chapter13/routepolicy/.checkstyle
+chapter13/routepolicy/.classpath
+chapter13/routepolicy/.pmd
+chapter13/routepolicy/.project
+chapter13/routepolicy/.settings
+chapter13/routepolicy/eclipse-classes
+chapter13/routepolicy/target
+chapter13/shutdown/*.i??
+chapter13/shutdown/.checkstyle
+chapter13/shutdown/.classpath
+chapter13/shutdown/.pmd
+chapter13/shutdown/.project
+chapter13/shutdown/.settings
+chapter13/shutdown/eclipse-classes
+chapter13/shutdown/target
+chapter13/standalone/*.i??
+chapter13/standalone/.checkstyle
+chapter13/standalone/.classpath
+chapter13/standalone/.pmd
+chapter13/standalone/.project
+chapter13/standalone/.settings
+chapter13/standalone/eclipse-classes
+chapter13/standalone/target
+chapter13/startup/*.i??
+chapter13/startup/.checkstyle
+chapter13/startup/.classpath
+chapter13/startup/.pmd
+chapter13/startup/.project
+chapter13/startup/.settings
+chapter13/startup/eclipse-classes
+chapter13/startup/target
+chapter13/war-jboss/*.i??
+chapter13/war-jboss/.checkstyle
+chapter13/war-jboss/.classpath
+chapter13/war-jboss/.pmd
+chapter13/war-jboss/.project
+chapter13/war-jboss/.settings
+chapter13/war-jboss/eclipse-classes
+chapter13/war-jboss/target
+chapter13/war-servlet/*.i??
+chapter13/war-servlet/.checkstyle
+chapter13/war-servlet/.classpath
+chapter13/war-servlet/.pmd
+chapter13/war-servlet/.project
+chapter13/war-servlet/.settings
+chapter13/war-servlet/eclipse-classes
+chapter13/war-servlet/target
+chapter13/war/*.i??
+chapter13/war/.checkstyle
+chapter13/war/.classpath
+chapter13/war/.pmd
+chapter13/war/.project
+chapter13/war/.settings
+chapter13/war/eclipse-classes
+chapter13/war/target
+chapter14/pojo-messaging/*.i??
+chapter14/pojo-messaging/.checkstyle
+chapter14/pojo-messaging/.classpath
+chapter14/pojo-messaging/.pmd
+chapter14/pojo-messaging/.project
+chapter14/pojo-messaging/.settings
+chapter14/pojo-messaging/eclipse-classes
+chapter14/pojo-messaging/target
+chapter14/starterkit/*.i??
+chapter14/starterkit/.checkstyle
+chapter14/starterkit/.classpath
+chapter14/starterkit/.pmd
+chapter14/starterkit/.project
+chapter14/starterkit/.settings
+chapter14/starterkit/eclipse-classes
+chapter14/starterkit/target
 chapter2/*.i??
 chapter2/.checkstyle
 chapter2/.classpath
@@ -32,7 +200,6 @@ chapter2/cbr/.classpath
 chapter2/cbr/.pmd
 chapter2/cbr/.project
 chapter2/cbr/.settings
-chapter2/cbr/classes
 chapter2/cbr/eclipse-classes
 chapter2/cbr/target
 chapter2/classes
@@ -43,7 +210,6 @@ chapter2/file-jms/.classpath
 chapter2/file-jms/.pmd
 chapter2/file-jms/.project
 chapter2/file-jms/.settings
-chapter2/file-jms/classes
 chapter2/file-jms/eclipse-classes
 chapter2/file-jms/target
 chapter2/filter/*.i??
@@ -52,9 +218,32 @@ chapter2/filter/.classpath
 chapter2/filter/.pmd
 chapter2/filter/.project
 chapter2/filter/.settings
-chapter2/filter/classes
 chapter2/filter/eclipse-classes
 chapter2/filter/target
+chapter2/multicast/*.i??
+chapter2/multicast/.checkstyle
+chapter2/multicast/.classpath
+chapter2/multicast/.pmd
+chapter2/multicast/.project
+chapter2/multicast/.settings
+chapter2/multicast/eclipse-classes
+chapter2/multicast/target
+chapter2/recipientlist/*.i??
+chapter2/recipientlist/.checkstyle
+chapter2/recipientlist/.classpath
+chapter2/recipientlist/.pmd
+chapter2/recipientlist/.project
+chapter2/recipientlist/.settings
+chapter2/recipientlist/eclipse-classes
+chapter2/recipientlist/target
+chapter2/spring/*.i??
+chapter2/spring/.checkstyle
+chapter2/spring/.classpath
+chapter2/spring/.pmd
+chapter2/spring/.project
+chapter2/spring/.settings
+chapter2/spring/eclipse-classes
+chapter2/spring/target
 chapter2/target
 chapter2/wiretap/*.i??
 chapter2/wiretap/.checkstyle
@@ -65,6 +254,246 @@ chapter2/wiretap/.settings
 chapter2/wiretap/classes
 chapter2/wiretap/eclipse-classes
 chapter2/wiretap/target
+chapter3/converter/*.i??
+chapter3/converter/.checkstyle
+chapter3/converter/.classpath
+chapter3/converter/.pmd
+chapter3/converter/.project
+chapter3/converter/.settings
+chapter3/converter/eclipse-classes
+chapter3/converter/target
+chapter3/order/*.i??
+chapter3/order/.checkstyle
+chapter3/order/.classpath
+chapter3/order/.pmd
+chapter3/order/.project
+chapter3/order/.settings
+chapter3/order/eclipse-classes
+chapter3/order/target
+chapter3/transform/*.i??
+chapter3/transform/.checkstyle
+chapter3/transform/.classpath
+chapter3/transform/.pmd
+chapter3/transform/.project
+chapter3/transform/.settings
+chapter3/transform/eclipse-classes
+chapter3/transform/target
+chapter4/bean/*.i??
+chapter4/bean/.checkstyle
+chapter4/bean/.classpath
+chapter4/bean/.pmd
+chapter4/bean/.project
+chapter4/bean/.settings
+chapter4/bean/eclipse-classes
+chapter4/bean/target
+chapter5/errorhandler/*.i??
+chapter5/errorhandler/.checkstyle
+chapter5/errorhandler/.classpath
+chapter5/errorhandler/.pmd
+chapter5/errorhandler/.project
+chapter5/errorhandler/.settings
+chapter5/errorhandler/eclipse-classes
+chapter5/errorhandler/target
+chapter5/onexception/*.i??
+chapter5/onexception/.checkstyle
+chapter5/onexception/.classpath
+chapter5/onexception/.pmd
+chapter5/onexception/.project
+chapter5/onexception/.settings
+chapter5/onexception/eclipse-classes
+chapter5/onexception/target
+chapter5/usecase/*.i??
+chapter5/usecase/.checkstyle
+chapter5/usecase/.classpath
+chapter5/usecase/.pmd
+chapter5/usecase/.project
+chapter5/usecase/.settings
+chapter5/usecase/eclipse-classes
+chapter5/usecase/target
+chapter6/error/*.i??
+chapter6/error/.checkstyle
+chapter6/error/.classpath
+chapter6/error/.pmd
+chapter6/error/.project
+chapter6/error/.settings
+chapter6/error/eclipse-classes
+chapter6/error/target
+chapter6/firsttest/*.i??
+chapter6/firsttest/.checkstyle
+chapter6/firsttest/.classpath
+chapter6/firsttest/.pmd
+chapter6/firsttest/.project
+chapter6/firsttest/.settings
+chapter6/firsttest/eclipse-classes
+chapter6/firsttest/target
+chapter6/miranda/*.i??
+chapter6/miranda/.checkstyle
+chapter6/miranda/.classpath
+chapter6/miranda/.pmd
+chapter6/miranda/.project
+chapter6/miranda/.settings
+chapter6/miranda/eclipse-classes
+chapter6/miranda/target
+chapter6/notify/*.i??
+chapter6/notify/.checkstyle
+chapter6/notify/.classpath
+chapter6/notify/.pmd
+chapter6/notify/.project
+chapter6/notify/.settings
+chapter6/notify/eclipse-classes
+chapter6/notify/target
+chapter7/cxf/*.i??
+chapter7/cxf/.checkstyle
+chapter7/cxf/.classpath
+chapter7/cxf/.pmd
+chapter7/cxf/.project
+chapter7/cxf/.settings
+chapter7/cxf/code_first/*.i??
+chapter7/cxf/code_first/.checkstyle
+chapter7/cxf/code_first/.classpath
+chapter7/cxf/code_first/.pmd
+chapter7/cxf/code_first/.project
+chapter7/cxf/code_first/.settings
+chapter7/cxf/code_first/eclipse-classes
+chapter7/cxf/code_first/target
+chapter7/cxf/contract_first/*.i??
+chapter7/cxf/contract_first/.checkstyle
+chapter7/cxf/contract_first/.classpath
+chapter7/cxf/contract_first/.pmd
+chapter7/cxf/contract_first/.project
+chapter7/cxf/contract_first/.settings
+chapter7/cxf/contract_first/eclipse-classes
+chapter7/cxf/contract_first/target
+chapter7/cxf/eclipse-classes
+chapter7/cxf/target
+chapter7/file/*.i??
+chapter7/file/.checkstyle
+chapter7/file/.classpath
+chapter7/file/.pmd
+chapter7/file/.project
+chapter7/file/.settings
+chapter7/file/eclipse-classes
+chapter7/file/target
+chapter7/ftp/*.i??
+chapter7/ftp/.checkstyle
+chapter7/ftp/.classpath
+chapter7/ftp/.pmd
+chapter7/ftp/.project
+chapter7/ftp/.settings
+chapter7/ftp/eclipse-classes
+chapter7/ftp/target
+chapter7/jdbc/*.i??
+chapter7/jdbc/.checkstyle
+chapter7/jdbc/.classpath
+chapter7/jdbc/.pmd
+chapter7/jdbc/.project
+chapter7/jdbc/.settings
+chapter7/jdbc/eclipse-classes
+chapter7/jdbc/target
+chapter7/jms/*.i??
+chapter7/jms/.checkstyle
+chapter7/jms/.classpath
+chapter7/jms/.pmd
+chapter7/jms/.project
+chapter7/jms/.settings
+chapter7/jms/eclipse-classes
+chapter7/jms/target
+chapter7/jpa/*.i??
+chapter7/jpa/.checkstyle
+chapter7/jpa/.classpath
+chapter7/jpa/.pmd
+chapter7/jpa/.project
+chapter7/jpa/.settings
+chapter7/jpa/eclipse-classes
+chapter7/jpa/target
+chapter7/mina/*.i??
+chapter7/mina/.checkstyle
+chapter7/mina/.classpath
+chapter7/mina/.pmd
+chapter7/mina/.project
+chapter7/mina/.settings
+chapter7/mina/eclipse-classes
+chapter7/mina/target
+chapter7/quartz/*.i??
+chapter7/quartz/.checkstyle
+chapter7/quartz/.classpath
+chapter7/quartz/.pmd
+chapter7/quartz/.project
+chapter7/quartz/.settings
+chapter7/quartz/eclipse-classes
+chapter7/quartz/target
+chapter7/seda/*.i??
+chapter7/seda/.checkstyle
+chapter7/seda/.classpath
+chapter7/seda/.pmd
+chapter7/seda/.project
+chapter7/seda/.settings
+chapter7/seda/eclipse-classes
+chapter7/seda/target
+chapter7/timer/*.i??
+chapter7/timer/.checkstyle
+chapter7/timer/.classpath
+chapter7/timer/.pmd
+chapter7/timer/.project
+chapter7/timer/.settings
+chapter7/timer/eclipse-classes
+chapter7/timer/target
+chapter8/aggregator/*.i??
+chapter8/aggregator/.checkstyle
+chapter8/aggregator/.classpath
+chapter8/aggregator/.pmd
+chapter8/aggregator/.project
+chapter8/aggregator/.settings
+chapter8/aggregator/eclipse-classes
+chapter8/aggregator/target
+chapter8/loadbalancer/*.i??
+chapter8/loadbalancer/.checkstyle
+chapter8/loadbalancer/.classpath
+chapter8/loadbalancer/.pmd
+chapter8/loadbalancer/.project
+chapter8/loadbalancer/.settings
+chapter8/loadbalancer/eclipse-classes
+chapter8/loadbalancer/src/*.i??
+chapter8/loadbalancer/src/.checkstyle
+chapter8/loadbalancer/src/.classpath
+chapter8/loadbalancer/src/.pmd
+chapter8/loadbalancer/src/.project
+chapter8/loadbalancer/src/.settings
+chapter8/loadbalancer/src/eclipse-classes
+chapter8/loadbalancer/src/target
+chapter8/loadbalancer/target
+chapter8/routingslip/*.i??
+chapter8/routingslip/.checkstyle
+chapter8/routingslip/.classpath
+chapter8/routingslip/.pmd
+chapter8/routingslip/.project
+chapter8/routingslip/.settings
+chapter8/routingslip/eclipse-classes
+chapter8/routingslip/target
+chapter8/splitter/*.i??
+chapter8/splitter/.checkstyle
+chapter8/splitter/.classpath
+chapter8/splitter/.pmd
+chapter8/splitter/.project
+chapter8/splitter/.settings
+chapter8/splitter/eclipse-classes
+chapter8/splitter/target
+chapter9/multiple-routes/*.i??
+chapter9/multiple-routes/.checkstyle
+chapter9/multiple-routes/.classpath
+chapter9/multiple-routes/.pmd
+chapter9/multiple-routes/.project
+chapter9/multiple-routes/.settings
+chapter9/multiple-routes/eclipse-classes
+chapter9/multiple-routes/target
+chapter9/riderautoparts-order/*.i??
+chapter9/riderautoparts-order/.checkstyle
+chapter9/riderautoparts-order/.classpath
+chapter9/riderautoparts-order/.pmd
+chapter9/riderautoparts-order/.project
+chapter9/riderautoparts-order/.settings
+chapter9/riderautoparts-order/eclipse-classes
+chapter9/riderautoparts-order/target
 chapter9/riderautoparts-partner/*.i??
 chapter9/riderautoparts-partner/.checkstyle
 chapter9/riderautoparts-partner/.classpath
@@ -74,6 +503,22 @@ chapter9/riderautoparts-partner/.settings
 chapter9/riderautoparts-partner/classes
 chapter9/riderautoparts-partner/eclipse-classes
 chapter9/riderautoparts-partner/target
+chapter9/uow/*.i??
+chapter9/uow/.checkstyle
+chapter9/uow/.classpath
+chapter9/uow/.pmd
+chapter9/uow/.project
+chapter9/uow/.settings
+chapter9/uow/eclipse-classes
+chapter9/uow/target
+chapter9/xa/*.i??
+chapter9/xa/.checkstyle
+chapter9/xa/.classpath
+chapter9/xa/.pmd
+chapter9/xa/.project
+chapter9/xa/.settings
+chapter9/xa/eclipse-classes
+chapter9/xa/target
 /classes
 /eclipse-classes
 /target
