Set the svn:ignore property on chapter11
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@210 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,46 @@ chapter10/synchronicity/.project
 chapter10/synchronicity/.settings
 chapter10/synchronicity/eclipse-classes
 chapter10/synchronicity/target
+chapter11/custom/*.i??
+chapter11/custom/.checkstyle
+chapter11/custom/.classpath
+chapter11/custom/.pmd
+chapter11/custom/.project
+chapter11/custom/.settings
+chapter11/custom/eclipse-classes
+chapter11/custom/target
+chapter11/interceptor/*.i??
+chapter11/interceptor/.checkstyle
+chapter11/interceptor/.classpath
+chapter11/interceptor/.pmd
+chapter11/interceptor/.project
+chapter11/interceptor/.settings
+chapter11/interceptor/eclipse-classes
+chapter11/interceptor/target
+chapter11/order-router/*.i??
+chapter11/order-router/.checkstyle
+chapter11/order-router/.classpath
+chapter11/order-router/.pmd
+chapter11/order-router/.project
+chapter11/order-router/.settings
+chapter11/order-router/eclipse-classes
+chapter11/order-router/target
+chapter11/scala-order-router-javacontext/*.i??
+chapter11/scala-order-router-javacontext/.checkstyle
+chapter11/scala-order-router-javacontext/.classpath
+chapter11/scala-order-router-javacontext/.pmd
+chapter11/scala-order-router-javacontext/.project
+chapter11/scala-order-router-javacontext/.settings
+chapter11/scala-order-router-javacontext/eclipse-classes
+chapter11/scala-order-router-javacontext/target
+chapter11/scala-order-router/*.i??
+chapter11/scala-order-router/.checkstyle
+chapter11/scala-order-router/.classpath
+chapter11/scala-order-router/.pmd
+chapter11/scala-order-router/.project
+chapter11/scala-order-router/.settings
+chapter11/scala-order-router/eclipse-classes
+chapter11/scala-order-router/target
 chapter12/custom/*.i??
 chapter12/custom/.checkstyle
 chapter12/custom/.classpath
