Fixed issue with unresolved dependencies during sbt update
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@215 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ appendixE/lib_managed
 appendixE/logs
 appendixE/project/boot
 appendixE/project/build/target
+appendixE/project/plugins/lib_managed
+appendixE/project/plugins/project
+appendixE/project/plugins/src_managed
+appendixE/project/plugins/target
 appendixE/target
 chapter1/file-copy/*.i??
 chapter1/file-copy/.checkstyle
