another change to match chapter 2 text
git-svn-id: http://camelinaction.googlecode.com/svn/trunk@228 2ef4527c-bcc6-11de-8784-f7ad4773dbab

--- a/.gitignore
+++ b/.gitignore
@@ -264,6 +264,14 @@ chapter2/filter/.project
 chapter2/filter/.settings
 chapter2/filter/eclipse-classes
 chapter2/filter/target
+chapter2/ftp-jms/*.i??
+chapter2/ftp-jms/.checkstyle
+chapter2/ftp-jms/.classpath
+chapter2/ftp-jms/.pmd
+chapter2/ftp-jms/.project
+chapter2/ftp-jms/.settings
+chapter2/ftp-jms/eclipse-classes
+chapter2/ftp-jms/target
 chapter2/multicast/*.i??
 chapter2/multicast/.checkstyle
 chapter2/multicast/.classpath
