--- a/.gitattributes
+++ b/.gitattributes
@@ -30,6 +30,7 @@ chapter10/eip/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/pom.xml svneol=native#text/xml
 chapter10/pools/pom.xml svneol=native#text/xml
 chapter10/pools/src/test/resources/META-INF/spring/CustomThreadPoolProfileTest.xml svneol=native#text/xml
+chapter10/pools/src/test/resources/META-INF/spring/InlinedThreadPoolTest.xml svneol=native#text/xml
 chapter10/pools/src/test/resources/META-INF/spring/ThreadPoolTest.xml svneol=native#text/xml
 chapter10/pools/src/test/resources/log4j.properties svneol=native#text/plain
 chapter10/scalability/pom.xml svneol=native#text/xml
